Changes to be committed: 	modified:   canvas-pages/out/part-2.html 	modified:   canvas-pages/part-2.md 	modified:   notebooks/IR-applications.ipynb 	modified:   notebooks/IR-fundamentals.ipynb 	new file:   notebooks/images-ftir/07_ch17_Fig05.jpg 	new file:   notebooks/images-ftir/08_ch17_Tab03.jpg 	new file:   notebooks/images-ftir/16_ch17_Fig11.jpg 	new file:   notebooks/images-ftir/17_ch16_Fig13.jpg 	new file:   notebooks/images-ftir/17_ch17_Fig12.jpg 	new file:   notebooks/images-ftir/18_ch17_Fig13.jpg 	new file:   notebooks/images-ftir/The-PCA-score-plot-a-and-loading-spectra-b-on-the-first-two-principal-components-in.png 	new file:   notebooks/images-ftir/herriott-cell.jpg

--- a/notebooks/IR-applications.ipynb
+++ b/notebooks/IR-applications.ipynb
@@ -4,10 +4,192 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Atomic Spectroscopy\n",
+    "# Infrared Spectroscopy: Applications\n",
     "\n",
     "## Learning Objectives\n",
-    "*At the conclusion of in-class and outside learning, participants will be able to:*"
+    "*At the conclusion of in-class and outside learning, participants will be able to:*\n",
+    "- Compare and contrast qualitative and quantitative applications of IR spectroscopy.\n",
+    "- Describe the use of spectral libraries for qualitative applications.\n",
+    "- Compare the information content and utility of mid-IR and near-IR measurements.\n",
+    "- Compare multichannel IR measurements with IR measurements using photometers.\n",
+    "- Describe the mechanism in reflectance IR, ATR, and CRDS.\n",
+    "- Compare and contrast CLS, PLS, and PLA analysis.\n",
+    "## Suggested Problems\n",
+    "- 17-6, 17-9, 17-10"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Qualitative Analysis\n",
+    "\n",
+    "*Scope: Although assigning IR spectra is not a learning objective for this course, comparing and contrasting qualitative and quantitative analysis is a learning objective for this course.*\n",
+    "\n",
+    "Identifying a molecule on the basis of its infrared spectrum is an example of a qualitative application of infrared spectroscopy.\n",
+    "\n",
+    "![Infrared spectra of selected organic molecules](./images-ftir/07_ch17_Fig05.jpg)\n",
+    "\n",
+    "**Figure 1.** The group frequency region of the mid-IR ($\\approx 3600 - 1250 \\, cm^{-1}$) is used to identify common functional groups. The fingerprint region ($\\approx 1200 - 600 \\, cm^{-1}$) is used to identify compounds. From Skoog Figure 17-5.\n",
+    "\n",
+    "![Table of IR features used to identify common functional groups.](./images-ftir/08_ch17_Tab03.jpg)\n",
+    "\n",
+    "**Table 1.** Abbreviated Table of Group Frequencies for Organic Functional Groups\n",
+    "\n",
+    "### In Principle - *De Novo* Assignments\n",
+    "\n",
+    "Many features infrared spectra can be readily assigned using tables like this, and based on those spectra, one can infer the identity of the analyte.\n",
+    "\n",
+    "### In Practice - Spectral Libraries\n",
+    "\n",
+    "Most spectra are assigned through comparisons with spectra libraries, which contain spectra obtained for pure standards. Some examples:\n",
+    "- The National Institutes of Standards and Technology, which is an agency of the United States Department of Commerce whose mission is to promote American innovation and industrial competitiveness, maintains the [NIST Chemistry WebBook](https://webbook.nist.gov/chemistry/)\n",
+    "    - [Indene](https://webbook.nist.gov/cgi/cbook.cgi?ID=C95136&Units=SI)\n",
+    "    - [Formaldehyde](https://webbook.nist.gov/cgi/cbook.cgi?ID=C50000&Units=SI&Mask=80)\n",
+    "    - [NIST Quantitative Infrared Database](https://webbook.nist.gov/chemistry/quant-ir/)\n",
+    "    - [NIST Standard Reference Databases](https://www.nist.gov/srd/nist-standard-reference-database-35)\n",
+    "- There are commercially available libraries, e.g., [Sigma-Aldrich Library of FT-IR Spectra](https://sciencesolutions.wiley.com/solutions/technique/ir/sigma-aldrich-library-of-ft-ir-spectra/)\n",
+    "    - FT-IR Spectra: 11,270\n",
+    "    - Distinct Sigma-Aldrich Catalog Numbers: 11,270\n",
+    "    - > Take the guesswork out of your spectral analysis and create greater efficiencies in your lab. Our comprehensive libraries feature fully-reviewed, high-quality spectroscopy databases, enabling confident compound identification for a variety of environmental, forensic, pharmaceutical and industrial applications.\n",
+    "- Another strategy is to generate spectral libraries for specific applications. This is especially useful when samples may contain proprietary molecules. Another benefit of generating new spectral libraries is that you can ensure that reference spectra were obtained using the same methodology as for samples.\n",
+    "\n",
+    "#### Scoring Matches\n",
+    "\n",
+    "In this workflow, the spectrum for the sample will be score against each spectrum in the library. One approach is to score matches based on their \"hit quality index\" (HQI, typical score range between zero and one), which can depend on mathematical properties such as the Euclidean distance, the mean absolute deviation, or the correlation coefficient. High scoring matches are reported to the user. \n",
+    "\n",
+    "Many newer methods also contextualize this score by estimating a p-value. \n",
+    "- A null distribution of HQI scores is created by comparing the spectrum for the target analyte with those spectra for random molecules that are not the target. These random comparisons establish what HQI scores would be expected by chance.\n",
+    "- For an observed HQI score, the p-value is calculated as the proportion of null distribution scores that are greater than or equal to the observed score.\n",
+    "- Critical HQI values can be determined for common significance levels (e.g., $\\alpha = 0.05$)\n",
+    "\n",
+    "In the example below, four samples are qualitatively analyzed to determine whether the sample is microcrystalline cellulose. Consistent with all samples being different cellulose containing species, they all yield HQI that are close to the upper limit of one. However, only the true microcrystalline cellulose sample passes the probability test at the 95% confidence level ($p-value > 0.05$)\n",
+    "\n",
+    "**Table 2.** Sample data from Thermo-Scientific, testing the null hypothesis that the sample is microcrystalline cellulose (alternative hypothesis: the sample is not microcrystalline cellulose)\n",
+    "| Sample | p-value | HQI |\n",
+    "| --- | --- | --- |\n",
+    "| Microcrystalline cellulose | 0.338 | 0.9998 |\n",
+    "| Hydroxyethyl Cellulose | 0.00000754 | 0.9970 |\n",
+    "| Methyl Cellulose | 0.00000185 | 0.9766 |\n",
+    "| Hydroxypropyl Cellulose | 0.0000000323 |0.9796 |\n",
+    "\n",
+    "Here, we described library searching and p-value estimation for FT-IR spectra, but this approach is also used for many of experiments that generate spectra with many features for individual analytes (e.g., mass spectrometry).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Quantitative Analysis\n",
+    "\n",
+    "### Gas Analysis Using Photometer\n",
+    "\n",
+    "![IR photometer with a multipass cell.](./images-ftir/17_ch16_Fig13.jpg)\n",
+    "\n",
+    "**Figure 2.** A portable IR photometer designed for gas analysis. The sample is introduced into the cell by means of a pump. The path length can be changed by altering the number of mirror reflections. From Skoog Figure 16-13.\n",
+    "\n",
+    "![Herriott cell](https://www.thorlabs.com/images/TabImages/Herriott_Cell_A7-780.jpg)\n",
+    "\n",
+    "**Figure 3.** A Herriott cell is a multipass optical cavity consisting of two spherical mirrors of equal focal length set parallel to each other. Light enters through a hole in one mirror and undergoes multiple reflections between the mirrors in a systematic pattern before exiting through another hole. This design creates a long effective pathlength in a compact space, typically achieving 20-200 passes. Herriott cells are commonly used in trace gas analysist by increasing sensitivity by lengthening the interaction path between light and sample gas. Image from Thor labs, showing a 0.4 meter cell that can be operated with path lengths of 10.4 (28 passes) or 31.2 (80 passes) meters, depending on the entry point of the incident light relative to the center of the mirror.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cavity Ring-Down Spectroscopy\n",
+    "\n",
+    "Cavity Ring-Down Spectroscopy (CRDS) is a laser-based absorption technique that measures the decay rate of light trapped in a high-finesse optical cavity formed by two highly reflective mirrors (typically R > 99.99%). A laser pulse is injected into the cavity, and the time-dependent decay of the trapped light (the \"ring-down\") is measured. When a sample in the cavity absorbs light, it accelerates the decay rate. By comparing decay rates with and without the sample, the absolute absorption can be determined independent of laser power fluctuations. \n",
+    "\n",
+    "![Signal from cavity ring-down spectroscopy](https://www.iup.uni-bremen.de/troposphere/images/image001crds.jpg)\n",
+    "\n",
+    "**Figure 4.** Schematic ring-down signals with (red curve) and without (black curve) absorbing medium. From the Tropospheric Radical Observations and Laser Absorption Spectroscopy research group at the University of Bremen.\n",
+    "\n",
+    "The technique's high sensitivity comes from both the long effective pathlength (typically kilometers) created by multiple reflections and its ability to measure absolute time constants rather than relative changes in intensity."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Mid-IR Reflection Spectroscopy\n",
+    "\n",
+    "IR reflection spectroscopy is widely used for solid samples, powders, and liquid samples that are challenging to prepare for analysis using conventional instruments for IR spectroscopy. Some examples include polymer films, fibers, and agricultural materials.\n",
+    "\n",
+    "### Diffuse-Reflectance Spectrometry\n",
+    "\n",
+    "This is widely used to analyze powder samples with minimal sample preparation.\n",
+    "\n",
+    "![Diffuse reflection attachment for an FT-IR spectrometer.](./images-ftir/16_ch17_Fig11.jpg)\n",
+    "\n",
+    "**Figure 5.** A diffuse reflectance attachement for an FT-IR spectrometer. From Skoog Figure 17-11.\n",
+    "\n",
+    "![Absorption versus diffuse reflectance spectra of carbazole](./images-ftir/17_ch17_Fig12.jpg)\n",
+    "\n",
+    "**Figure 6.** Comparison of (a) absorption spectrum of carbazole and the (b) diffuse-reflectance spectrum of carbazole. From Skoog Figure 17-12. There are many similarities between these two spectra, especially with regards to the relative heights of peaks in each spectrum. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Attenuated Total Reflection\n",
+    "\n",
+    "Attenuated Total Reflection (ATR) IR spectroscopy uses a high refractive index crystal (typically diamond, germanium, or zinc selenide) in contact with a sample. IR light enters the crystal at an angle greater than the critical angle, undergoes total internal reflection, and creates an evanescent wave that penetrates a few microns into the sample. The light is partially absorbed by the sample during each reflection, resulting in an IR spectrum. The technique requires minimal sample preparation, works well with aqueous solutions (due to short pathlength), and is especially useful for surface analysis, thick or strongly absorbing materials, and hard-to-prepare samples like polymers, pastes, powders, and liquids.\n",
+    "\n",
+    "![ATR cell](./images-ftir/18_ch17_Fig13.jpg)\n",
+    "\n",
+    "**Figure 7.** Apparatus for ATR experiments. In (a) a solid sample is shown mounted on an ATR crystal of high refractive index. The materials used as ATR crystals include AgCl, Ge, and Si. Solid samples can be pressed again the crystal to obtain optical contact. In (b) the ATR crystal is integrated into a IR spectrometer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Near-IR Spectroscopy\n",
+    "\n",
+    "The near-IR region is primarily comprised of overtone and combination bands. These transitions typically have weaker molar absorptivities, but are particularly useful for routine quantitative analysis in industrial applications, especially for quality control and process monitoring.\n",
+    "\n",
+    "Some benefits:\n",
+    "- Higher Signal-to-Noise Ratio:\n",
+    "    - Near-IR sources are more intense than mid-IR sources\n",
+    "    - Detectors have better performance in the near-IR region\n",
+    "    - Lower instrumental noise leads to better precision\n",
+    "- Weaker absorption allows direct measurement of concentrated samples, without dilution.\n",
+    "- These wavelength easily couple with fiber optic probes, which can be used for remote sampling\n",
+    "\n",
+    "### Chemometrics\n",
+    "\n",
+    "Previously, we introduced classical least squares as a method quantify the relative abundance of multiple components in a sample based on spectral vectors.\n",
+    "\n",
+    "#### Classical Least Squares:\n",
+    "- Requires knowledge of all constituents' pure spectra\n",
+    "- Assumes Beer's Law holds (linear additivity)\n",
+    "- Directly solves for concentrations using known spectra\n",
+    "- Cannot handle spectral interactions or matrix effects\n",
+    "- More sensitive to baseline shifts and spectral artifacts\n",
+    "- Works best with simple, well-characterized systems\n",
+    "\n",
+    "#### Partial Least Squares:\n",
+    "- Does not require knowledge of pure component spectra\n",
+    "- Uses both spectral and concentration data to build model\n",
+    "- Creates latent variables that maximize covariance between spectra and concentrations\n",
+    "- Can handle spectral interactions and matrix effects\n",
+    "- More robust to baseline variations and noise\n",
+    "- Better suited for complex mixtures and real-world samples\n",
+    "- Risk of overfitting if too many latent variables used\n",
+    "\n",
+    "#### Principle Component Analysis\n",
+    "\n",
+    "Principal Component Analysis (PCA) is a dimensionality reduction technique that transforms high-dimensional data into a new set of uncorrelated variables called principal components (PCs). \n",
+    "- Each PC is a linear combination of the original variables, constructed to capture the maximum remaining variance in the data. \n",
+    "- The first PC accounts for the largest variance, the second PC captures the second most variance while being orthogonal to the first, and so on. \n",
+    "- This transformation produces a new coordinate system where the PCs are ordered by their importance in explaining data variance. \n",
+    "- PCA is commonly used for data compression, pattern recognition, and removal of collinearity in spectroscopic data\n",
+    "\n",
+    "![PCA analysis of leaves from 4 species of shorea](./images-ftir/The-PCA-score-plot-a-and-loading-spectra-b-on-the-first-two-principal-components-in.png)\n",
+    "\n",
+    "**Figure 8.** The PCA score plot (a) and loading spectra (b) on the first two principal components in the 6,200-5,600 $cm^{-1}$ spectral region. BAL:Balau, HRM:Heavy Red Meranti, LRM:Light Red Meranti, WM:White Meranti Figure from DOI:[10.4308/hjb.27.3.247](http://dx.doi.org/10.4308/hjb.27.3.247).\n"
    ]
   }
  ],
