--- a/notebooks/IR-fundamentals.ipynb
+++ b/notebooks/IR-fundamentals.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# FT-IR Spectroscopy\n",
+    "# Infrared Spectroscopy: Fundamentals, Instrumentation, and Fourier Transforms\n",
     "\n",
     "## Learning Objectives\n",
     "*At the conclusion of in-class and outside learning, participants will be able to:*\n",
