Changes to be committed: 	modified:   canvas-pages/out/part-3.html 	modified:   canvas-pages/part-3.md 	new file:   notebooks/images-ms/resolving-power.png 	modified:   notebooks/mass-spectrometry.ipynb

--- a/notebooks/mass-spectrometry.ipynb
+++ b/notebooks/mass-spectrometry.ipynb
@@ -173,7 +173,7 @@
     "## Three Common Examples of Mass Spectrometers\n",
     "A **block diagram** represents the principal parts or functions of an instrument using blocks and represents the relationship between the blocks using arrows.\n",
     "\n",
-    "![Diagrams showing the relations between the ionization source, mass analyzer, and detector in common mass spectrometers.](images/block-diagrams.png)\n",
+    "![Diagrams showing the relations between the ionization source, mass analyzer, and detector in common mass spectrometers.](images-ms/block-diagrams.png)\n",
     "\n",
     "**Figure 5.** Block diagrams for three common examples of mass spectrometers. MALDI stands for “matrix-assisted laser-desorption ionization,” which will be described below. "
    ]
@@ -349,6 +349,85 @@
     "ax.set_ylabel('Gain')\n",
     "ax.legend(loc='upper left',reverse=True,title='Yield')\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Multichannel Plate Detectors\n",
+    "A **multichannel plate detector (MCP)** is a planar electron multiplier consisting of millions of microscopic channels, each acting as an independent electron multiplier to amplify signals.\n",
+    "\n",
+    "![Multichannel plate detector](https://www.rp-photonics.com/img/microchannel_plate.webp)  \n",
+    "**Figure 12.** Diagram of a multichannel plate detector. Image reproduced from [RP Photonics](https://www.rp-photonics.com/microchannel_plates.html).\n",
+    "\n",
+    "Relative to discrete and continuous dynode detectors, time-of-flight (TOF) MS systems benefit from the following properties of MCP detectors:\n",
+    "- MCPs have large surfaces (cm instead of mm), which enables high duty cycle measurements (a larger fraction of the ion beam can be sampled in experiments with orthogonal acceleration).\n",
+    "- MCPs have shorter electron transit paths, which results in faster response times. Faster signal generation and better temporal resolution is required for high-resolution TOF."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Selecting Mass Analyzers\n",
+    "\n",
+    "### Resolving Power\n",
+    "\n",
+    "$$ Resolving \\, power = R_p = \\frac{\\frac{m}{z}}{FWHM} $$\n",
+    "\n",
+    "- $FWHM$ is the full width of the peak at half the maximum height (*i.e.*, full with at half max).\n",
+    "- Note that $R_p$ is a figure-of-merit for a single peak, whereas peak-to-peak resolution ($R_{pp}$) in chromatography is a figure-of-merit for a pair of peaks.\n",
+    "\n",
+    "![Examples of spectra obtained at different resolving powers.](./images-ms/resolving-power.png)\n",
+    "\n",
+    "**Figure 12.** Expected mass spectra of the Beta-chain of human insulin, $[M+H]^+$, and of HIV p24, $[M+10H]^{10+}$, as a function of resolving power.\n",
+    "\n",
+    "#### Reflection Question\n",
+    "- What are the monoisotopic and average masses of each biomolecule?\n",
+    "- List differences observed between the spectra as a function of analyte and resolving power. \n",
+    "- Based on these results, when would you report $m_{monoisotopic}? When would you report $m_{average}? \n",
+    "\n",
+    "### Mass Accuray\n",
+    "\n",
+    "$$ ppm \\, mass \\, accuracy = \\lvert \\frac{\\frac{m}{z}_{measured}-\\frac{m}{z}_{expected}}{\\frac{m}{z}_{expected}} \\rvert \\cdot 10^6 $$\n",
+    "\n",
+    "| Peptide Sequence | C | H | O | N | mass / Da |\n",
+    "| --- | --- | --- | --- | --- | --- |\n",
+    "| NQ | 9 | 15 | 5 | 4 | 261.1194 |\n",
+    "| NE | 9 | 15 | 6 | 3 | 262.1034 |\n",
+    "| EN | 9 | 15 | 6 | 3 | 262.1034 |\n",
+    "| DQ | 9 | 15 | 6 | 3 | 262.1034 |\n",
+    "| DK | 10 | 19 | 5 | 3 | 262.1398 |\n",
+    "\n",
+    "Consider:\n",
+    "- NQ and NE differ in mass by ~1 Da. If you were expecting NQ, but your sample instead contained NE, the apparent error would be 3817 ppm.\n",
+    "- DQ and DK differ in mass by 36 mDa (CH4 versus O). If you were expecting DQ, but your sample instead contained DK, the apparent error would be 138 ppm.\n",
+    "\n",
+    "### Scanning Versus Multichannel Analyzers\n",
+    "\n",
+    "- A **scanning analyzer** analyzes a single *m*/*z* at a time. The instrument scans an electric field or a magnetic field to analyze ions of different *m*/*z*.\n",
+    "- A **multichannel analyzer** detects all *m*/*z* during an analysis (or a wide range of *m*/*z* in a single analysis). In contrast, a **filtering analyzer** detects a single *m*/*z* and destroys all other ions.\n",
+    "\n",
+    "### Matt's Rough Guide to Mass Analyzers\n",
+    "\n",
+    "Different mass analyzers can have significantly different figures of merit. Here is a rough guide to typical figures of merit for instruments that you are likely to encounter in mass spectrometry facilities.\n",
+    "\n",
+    "| Analyzer | Scanning | Multichannel Detection | $ \\approx R_p $  | $ \\approx Accuracy / ppm $ |\n",
+    "| --- | :---: | :---: | :---: | :---: |\n",
+    "| Quadrupole filter | Yes | No | $10^2$ | $10^3$ |\n",
+    "| Quadrupole trap | Yes | Yes | $10^3$ | $10^2$ |\n",
+    "| Time-of-flight | No | Yes | $10^4$ | $1 - 10$ |\n",
+    "| Magnetic sector | Yes | No | $10^4 - 10^5$ | $1$ |\n",
+    "| Fourier transform | No | Yes | $10^5 - 10^6$ | $1$ |\n",
+    "\n",
+    "In additional, different implementations of a specific class of mass analyer can have different figures of merit. For example,\n",
+    "- Quadrupole filters can in principle obtain much higher resolving powers, but in doing so, also yield poor transmission efficiency (sensitivity). Quadrupole filters are typically operated under conditions that yield high sensitivity and low resolving power.\n",
+    "- Time-of-flight is a field of very active development right now. Some systems that yield an order of magnitude high resolvoing power and mass accuracy are now commercially available.\n",
+    "\n",
+    "Other important figures of merit include:\n",
+    "- The **time that it takes to acquire a mass spectrum**, which affects the number of measurements that can be performed per unit time. This is especially important in liquid chromatography MS, in which all experiments must take place during the liquid chromatography seperation.\n",
+    "- The **linear dynamic range**. This depends on many factors, including the mass analyzer, the detector, and the digitizer."
    ]
   }
  ],
