Changes to be committed: 	modified:   notebooks/chromatography-introduction.ipynb

--- a/notebooks/chromatography-introduction.ipynb
+++ b/notebooks/chromatography-introduction.ipynb
@@ -190,12 +190,12 @@
    "metadata": {},
    "source": [
     "### Reflection Question\n",
-    "2. Based on Figure 2, what are the retention times of analytes A and B?\n",
-    "3. On Figure tk, label the peaks corresponding to solute A and solute B. Retention time determination should be consistent from person to person. From the chromatogram, what part of the peak should be used to give the most consistent retention times? \n",
+    "2. Based on Figure 3, what are the retention times of analytes A and B?\n",
+    "3. On Figure 3, label the peaks corresponding to solute A and solute B. Retention time determination should be consistent from person to person. From the chromatogram, what part of the peak should be used to give the most consistent retention times? \n",
     "4. Looking at the chromatogram, determine the void time ($t_m$) for this column.\n",
     "5. When the solute is in the mobile phase, it is transported down the column at the same speed as the mobile phase. Therefore, the void time is the same for all the solutes in this chromatogram. Why is the void time equal to the time the solutes spend in the mobile phase?\n",
     "6. If the retention time of a solute is the sum of the time that the solute spends in the mobile phase and in the stationary phase, how could you determine the time the solute spends in only the stationary phase?\n",
-    "7. Write an equation to show how the retention factors for each solute are determined from the chromatogram in Figure 2 and calculate the retention factors for A and B. What are the units of the retention factor?\n",
+    "7. Write an equation to show how the retention factors for each solute are determined from the chromatogram in Figure 3 and calculate the retention factors for A and B. What are the units of the retention factor?\n",
     "8. How does the retention time and width influence the quality of the separation between the peaks for A and B?"
    ]
   },
