Changes to be committed: 	modified:   notebooks/chromatography-introduction.ipynb 	new file:   notebooks/images-chromatography/chromatograph-snapshot-01.png 	new file:   notebooks/images-chromatography/chromatograph-snapshot.ai

--- a/notebooks/chromatography-introduction.ipynb
+++ b/notebooks/chromatography-introduction.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "![Typical capilary column](./images-chromatography/Figure12.24.jpg)\n",
     "\n",
-    "**Figure tk.** Typical example of a capillary column for gas chromatography. This column is 30 m long with an internal di-ameter of 247 µm. The interior surface of the capillary has a 0.25 µm coating of the liquid phase. Reproduced from Figure 12.24 in *Analytical Chemistry 2.1* by David Harvey.\n",
+    "**Figure 2.** Typical example of a capillary column for gas chromatography. This column is 30 m long with an internal di-ameter of 247 µm. The interior surface of the capillary has a 0.25 µm coating of the liquid phase. Reproduced from Figure 12.24 in *Analytical Chemistry 2.1* by David Harvey.\n",
     "\n",
     "### The Mobile Phase\n",
     "\n",
@@ -80,10 +80,10 @@
     "\n",
     "![view of analyte position during chromatography experiments](./images-chromatography/separation-01.png)\n",
     "\n",
-    "**Figure 2.** A petroleum sample was colected and diluted with hexane at a 1:100 ratio. The diluted sample was analyzed with gas chromatography equipped with a flame ionization detector (FID) and a non-polar capillary column (30m × 0.25mm × 0.25μm DB-5 or equivalent). The GC system was programed with an inlet temperature of 250 °C, detector temperature of 300 °C, and the column oven was held at 80 °C, with helium carrier gas at a constant flow of 1.2 mL/min. 1 μL of the diluted sample was injected using a split ratio of 50:1. \n",
+    "**Figure 3.** A petroleum sample was colected and diluted with hexane at a 1:100 ratio. The diluted sample was analyzed with gas chromatography equipped with a flame ionization detector (FID) and a non-polar capillary column (30m × 0.25mm × 0.25μm DB-5 or equivalent). The GC system was programed with an inlet temperature of 250 °C, detector temperature of 300 °C, and the column oven was held at 80 °C, with helium carrier gas at a constant flow of 1.2 mL/min. 1 μL of the diluted sample was injected using a split ratio of 50:1. \n",
     "\n",
     "### Reflection Question\n",
-    "1. In Figure 2 at 0 minutes, a sample containing analytes A and B are injected into the column. As individuals, list qualitative differences observed as time progresses on Figure 2. As a group, compare your lists and develop a comprehensive list.\n"
+    "1. In Figure 3 at 0 minutes, a sample containing analytes A and B are injected into the column. As individuals, list qualitative differences observed as time progresses on Figure 3. As a group, compare your lists and develop a comprehensive list.\n"
    ]
   },
   {
@@ -173,7 +173,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Figure 3.** During the experiment described in Figure 2, a flame ionization detector was position at the outflow of the column and the signal was recorded as a function of time. This figure is an example of a **chromatogram**."
+    "**Figure 4.** During the experiment described in Figure 2, a flame ionization detector was position at the outflow of the column and the signal was recorded as a function of time. This figure is an example of a **chromatogram**."
    ]
   },
   {
@@ -190,13 +190,13 @@
    "metadata": {},
    "source": [
     "### Reflection Question\n",
-    "2. Based on Figure 2, what are the retention times of analytes A and B?\n",
-    "3. On Figure tk, label the peaks corresponding to solute A and solute B. Retention time determination should be consistent from person to person. From the chromatogram, what part of the peak should be used to give the most consistent retention times? \n",
+    "2. Based on Figure 4, what are the retention times of benzene and toluene?\n",
+    "3. On Figure 4, label the peaks corresponding to solute A and solute B. Retention time determination should be consistent from person to person. From the chromatogram, what part of the peak should be used to give the most consistent retention times? \n",
     "4. Looking at the chromatogram, determine the void time ($t_m$) for this column.\n",
     "5. When the solute is in the mobile phase, it is transported down the column at the same speed as the mobile phase. Therefore, the void time is the same for all the solutes in this chromatogram. Why is the void time equal to the time the solutes spend in the mobile phase?\n",
     "6. If the retention time of a solute is the sum of the time that the solute spends in the mobile phase and in the stationary phase, how could you determine the time the solute spends in only the stationary phase?\n",
-    "7. Write an equation to show how the retention factors for each solute are determined from the chromatogram in Figure 2 and calculate the retention factors for A and B. What are the units of the retention factor?\n",
-    "8. How does the retention time and width influence the quality of the separation between the peaks for A and B?"
+    "7. Write an equation to show how the retention factors for each solute are determined from the chromatogram in Figure 4 and calculate the retention factors for A and B. What are the units of the retention factor?\n",
+    "8. How does the retention time and width influence the quality of the separation between the peaks in the chromatograpm?"
    ]
   },
   {
@@ -280,7 +280,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Figure 4.** Examples of four pairs of chromatographic peaks that have different $R_{pp}$. Each peak in a given pair has the same area. The black trace is the sum of the signal for both peaks in the pair. "
+    "**Figure 5.** Examples of four pairs of chromatographic peaks that have different $R_{pp}$. Each peak in a given pair has the same area. The black trace is the sum of the signal for both peaks in the pair. "
    ]
   },
   {
@@ -300,16 +300,18 @@
    "source": [
     "## A Microscopic View\n",
     "\n",
-    "**Figure 5.** This is a snapshot of individual solute molecules A (open stars) and B (closed circles) in the vicinity of a solid stationary phase.\n",
+    "![Cartoon of a crosssection of a capillary](./images-chromatography/chromatograph-snapshot-01.png)\n",
+    "\n",
+    "**Figure 6.** This is a snapshot of individual molecules of benzene and toluene. Individual molecules are partitioned into either the mobile phase (the carrier gas inside the capillary) or the stationary phase (the PDMS thin film that lines the inner walls of the capillary).\n",
     "\n",
     "### Reflection Question\n",
-    "11. Examine the distribution of solutes A and B between the mobile phase and the stationary phase in Figure 5. The distribution of the solute molecules is similar to a partitioning between the stationary phase and the mobile phase. The distribution constant ($D$) is the ratio of the concentration of the solute in the stationary phase to the concentration in the mobile phase. Based on Figure tk, quickly estimate $D$ for A and B.\n",
+    "11. Examine the distribution of benzene and toluene between the mobile phase and the stationary phase in Figure 6. The distribution of the solute molecules is similar to a partitioning between the stationary phase and the mobile phase. The distribution constant ($D$) is the ratio of the concentration of the solute in the stationary phase to the concentration in the mobile phase. Based on Figure 6, quickly estimate $D$ for A and B.\n",
     "12. If the interaction between the mobile phase and the solute is stronger than the interaction between the stationary phase and the solute, which phase do solute molecules partition preferentially into? \n",
     "\n",
-    "> Keep in mind that Figure 5 is a snapshot during the separation. Remember that chromatography is a dynamic process ‒ analytes are constantly moving between the mobile phase and the stationary phase.\n",
+    "> Keep in mind that Figure 6 is a snapshot during the separation. Remember that chromatography is a dynamic process ‒ analytes are constantly moving between the mobile phase and the stationary phase.\n",
     "\n",
     "13. If an analyte partitions preferentially into the mobile phase, would you expect it to have a relatively long or short retention time? Do your estimates for the distribution constants support your conclusion?\n",
-    "14. Which analyte, benzene or touluene, has the higher boiling point? Base your answer on the retention times of the analytes. Describe your reasoning below.\n",
+    "14. Which analyte, benzene or toluene, has the higher boiling point? Base your answer on the retention times of the analytes. Describe your reasoning below.\n",
     "15. How confident are you in predicting the elution order of compounds in a separation? If you are not confident, what additional questions do you have?"
    ]
   },
